--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$android_support_version"
 
     // Support Design
@@ -105,11 +105,13 @@ dependencies {
 
     // Room
     implementation "android.arch.persistence.room:runtime:$room_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt "android.arch.persistence.room:compiler:$room_version"
 
 
     // LiveData & ViewModel
-    implementation"android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
@@ -136,4 +138,5 @@ dependencies {
     //Rx
     implementation "io.reactivex.rxjava2:rxjava:2.2.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+    implementation 'android.arch.persistence.room:rxjava2:1.0.0-alpha1'
 }
