--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     ext.room_version = '1.1.1'
     ext.gradle_version = '3.1.0'
     ext.picasso_version = '2.5.2'
+    ext.mockitoVersion = '2.11.0'
 
     repositories {
         google()
