changes on framework for testing purposes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
         enabled = true
     }
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     defaultConfig {
         applicationId "com.example.mobiquity"
         minSdkVersion 16
@@ -84,11 +88,6 @@ android {
         }
     }
 
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-        test.java.srcDirs = ['src/test/kotlin']
-        androidTest.java.srcDirs = ['src/androidTest/kotlin']
-    }
 }
 
 dependencies {
